fix top popup tip color, fix alignment of corner tips

--- a/src/components/Chloropleth.css
+++ b/src/components/Chloropleth.css
@@ -1,11 +1,21 @@
 .mapboxgl-popup-content {
-  @apply shadow-lg p-0 rounded dark:bg-gray-600 ring-1 ring-black dark:ring-gray-500 ring-opacity-5;
+  @apply shadow-lg p-0 rounded dark:bg-gray-600 ring-1 ring-black ring-opacity-5 dark:ring-gray-500;
 }
 
 .dark {
   .mapboxgl-popup-tip {
-    border-top-color: theme('colors.gray.600')
+    border-top-color: theme('colors.gray.600');
+    border-bottom-color: theme('colors.gray.600');
   }
+  .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip,
+  .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
+    margin-right: -1px;
+  }
+  .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip,
+  .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip {
+    margin-left: -1px;
+  }
+  
   .mapboxgl-ctrl-group {
     @apply bg-gray-600;
   }
